@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-07T00:51:08Z",
-  "count" : 3,
+  "timestamp" : "2022-06-20T01:01:55Z",
+  "count" : 2,
   "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -1, +3 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
