@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-06-19T16:13:59Z",
+  "timestamp" : "2022-06-20T01:01:55Z",
   "count_outdated" : 344,
   "uniques_outdated" : 185,
   "count" : 373,
-  "uniques" : 202,
+  "uniques" : 201,
   "clones" : [
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
