@@ -1,11 +1,11 @@
 {
   "count": 29,
-  "uniques": 4,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
